bondster-bco (1.2.4) unstable; urgency=low

  * Cleanup
  * Converted import daemon workflow to actor, synchronize new token after creation

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Sun, 28 Apr 2019 15:34:11 +0200

bondster-bco (1.2.3) unstable; urgency=low

  * Added missing accounts discovery, added metrics test
  * Strictly compare values in http steps of bbtest

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Sat, 27 Apr 2019 22:28:33 +0200

bondster-bco (1.2.2) unstable; urgency=low

  * Simplified config resolver
  * Nitpicking bbtest http_helper
  * Better http helper in bbtests

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Mon, 22 Apr 2019 10:48:26 +0200

bondster-bco (1.2.1) unstable; urgency=low

  * Proper ledger transaction api
  * Bugfix of vault create account format
  * Rolling contract

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Mon, 15 Apr 2019 17:05:15 +0200

bondster-bco (1.2.0) unstable; urgency=low

  * Integrate ledger instead of wall
  * Added proper purpose for self-signed cert
  * Updated copyright year to 2019
  * Bump github.com/gorilla/mux in /services/bondster-bco-rest
  * Bump github.com/sirupsen/logrus in /services/bondster-bco-import
  * Bump github.com/sirupsen/logrus in /services/bondster-bco-rest
  * Bump github.com/jancajthaml-openbank/local-fs
  * Require config file presence for units
  * Bump github.com/jancajthaml-openbank/local-fs
  * Update config.yml
  * Start daemon after app starts

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Sun, 14 Apr 2019 15:52:49 +0200

bondster-bco (1.1.2) unstable; urgency=low

  * Blackbox-testing install and uninstall
  * Namespaced unit with configuration change watch
  * Bump github.com/json-iterator/go in /services/bondster-bco-unit
  * Bump github.com/json-iterator/go in /services/bondster-bco-rest
  * Bump github.com/sirupsen/logrus in /services/bondster-bco-unit
  * Bump github.com/sirupsen/logrus in /services/bondster-bco-rest
  * Bump github.com/jancajthaml-openbank/local-fs