@@ -32,7 +32,7 @@ step "token :slash_pair should exist" do |slash_pair|
   send "I request curl :http_method :url", "GET", uri
   send "curl responds with :http_status", 200
 
-  actual_tokens = JSON.parse(HTTPHelper.response[:body]).map { |item| tenant + "/" + item }
+  actual_tokens = JSON.parse(HTTPHelper.response[:body]).map { |item| tenant + "/" + item["value"] }
 
   expect(actual_tokens).to include(tenant+"/"+token_value), "expected to find \"#{slash_pair}\" in #{actual_tokens}"
 end
