@@ -1,5 +1,5 @@
 Package: bondster-bco
-Version: 1.2.4+better-token-actor-logging
+Version: 1.2.4+token-created-at
 Architecture: amd64
 Maintainer: Jan Cajthaml <jan.cajthaml@gmail.com>
 Depends: init-system-helpers (>= 1.18~), libzmq5 (>= 4.2.1~), openssl (>= 1.1~)
