@@ -15,6 +15,7 @@
 package config
 
 import (
+	"encoding/hex"
 	"io/ioutil"
 	"os"
 	"strconv"
@@ -26,33 +27,45 @@ import (
 func loadConfFromEnv() Configuration {
 	logOutput := getEnvString("BONDSTER_BCO_LOG", "")
 	logLevel := strings.ToUpper(getEnvString("BONDSTER_BCO_LOG_LEVEL", "DEBUG"))
+	encryptionKey := getEnvString("BONDSTER_BCO_ENCRYPTION_KEY", "")
 	secrets := getEnvString("BONDSTER_BCO_SECRETS", "")
 	rootStorage := getEnvString("BONDSTER_BCO_STORAGE", "/data")
 	lakeHostname := getEnvString("BONDSTER_BCO_LAKE_HOSTNAME", "")
 	port := getEnvInteger("BONDSTER_BCO_HTTP_PORT", 4001)
 
-	if lakeHostname == "" || secrets == "" || rootStorage == "" {
+	if lakeHostname == "" || secrets == "" || rootStorage == "" || encryptionKey == "" {
 		log.Fatal("missing required parameter to run")
 	}
 
-	cert, err := ioutil.ReadFile(secrets + "/domain.local.crt")
+	serverCert, err := ioutil.ReadFile(secrets + "/domain.local.crt")
 	if err != nil {
 		log.Fatalf("unable to load certificate %s/domain.local.crt", secrets)
 	}
 
-	key, err := ioutil.ReadFile(secrets + "/domain.local.key")
+	serverKey, err := ioutil.ReadFile(secrets + "/domain.local.key")
 	if err != nil {
 		log.Fatalf("unable to load certificate %s/domain.local.key", secrets)
 	}
 
+	keyData, err := ioutil.ReadFile(encryptionKey)
+	if err != nil {
+		log.Fatalf("unable to load encryption key from %s", encryptionKey)
+	}
+
+	storageKey, err := hex.DecodeString(string(keyData))
+	if err != nil {
+		log.Fatalf("invalid encryption key %+v at %s", err, encryptionKey)
+	}
+
 	return Configuration{
-		RootStorage:  rootStorage,
-		ServerPort:   port,
-		SecretKey:    key,
-		SecretCert:   cert,
-		LakeHostname: lakeHostname,
-		LogOutput:    logOutput,
-		LogLevel:     logLevel,
+		RootStorage:   rootStorage,
+		EncryptionKey: []byte(storageKey),
+		ServerPort:    port,
+		SecretKey:     serverKey,
+		SecretCert:    serverCert,
+		LakeHostname:  lakeHostname,
+		LogOutput:     logOutput,
+		LogLevel:      logLevel,
 	}
 }
 
